# calendon

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  long_term.txt  todo.txt
assets/fonts/: bizcat.psf
assets/shaders/: atlas_sprite.frag  atlas_sprite.vert  fullscreen_textured_quad.vert  screen_coord.frag  solid_polygon.frag  solid_polygon.vert  sprite.vert  uv_as_red_green.frag  vert_passthrough.vert
docs/: conventions.md
docs/source/: conf.py  index.rst
docs/source/diagrams/: using-freestanding.dia  using-hosted.dia
docs/source/project/: conventions.rst  crank.rst  glossary.rst  lifecycle.rst  setup.rst  testing.rst  using.rst
docs/sphinx/source/: conf.py
py/: Design.md  README.md  crank.py  hammer.py  pylintrc  requirements.txt
py/calendon/: __init__.py  cmake.py  command_map.py  commands.py  context.py  git.py  interactive.py  multiplatform.py  parsers.py  run.py  script.py  stats.py
py/kn/: __init__.py  cmake.py  git.py  multiplatform.py  project.py
py/knell/: __init__.py  cmake.py  command_map.py  commands.py  context.py  crank.py  hammer.py  interactive.py  multiplatform.py  parsers.py  run.py  script.py
py/test/: test_crank.py  test_hammer.py  test_project.py
src/: CMakeLists.txt  assets.c  assets.h  bits.c  bits.h  control.c  control.h  fileio.c  fileio.h  input.c  input.h  kn.c  kn.h  log.c  log.h  main.c  math.c  math.h  memory.c  render-ll.c  render-ll.h  render.c  render.h  render_hl.c  render_hl.h  render_ll.c  render_ll.h  tick_limits.c  time.c  ui.c  ui.h
src/build_tools/: CMakeLists.txt  stamp_file.c
src/calendon/: .editorconfig  CMakeLists.txt  action.c  action.h  anim-loop.c  anim-loop.h  argparse.c  argparse.h  aspect-ratio.c  aspect-ratio.h  assets-config.c  assets-config.h  assets-fileio.c  assets-fileio.h  assets.c  assets.h  atlas.c  atlas.h  behavior.c  behavior.h  binary.c  binary.h  cn.c  cn.h  color.c  color.h  command-line-option.c  command-line-option.h  command-line-parse.c  command-line-parse.h  compat-gl.h  compat-sdl.h  compat-spng.h  compat-windows.h  control.c  control.h  crash.c  crash.h  dimension.h  driver.c  (+75 more)
src/demos/: CMakeLists.txt  animation_loop.c  animation_with_cancel.c  graphics_sample.c  image_animation_loop.c  interpolated_transitions.c  koch_curve.c  mouse_tracker.c  planets.c  sample.c  sample2.c  texture_drawing.c
src/driver/: CMakeLists.txt  main.c  tick_limits.h
src/engine/: CMakeLists.txt  assets-fileio.h  assets.c  fileio.c  fileio.h  kn.h  log.h  main.c  memory.c  memory.h  render-ll.c  render-ll.h  render.h  time.c  time.h  ui.c  ui.h
src/knell/: CMakeLists.txt  anim-loop.c  anim-loop.h  argparse.h  assets-fileio.c  assets-fileio.h  assets.c  assets.h  atlas.c  atlas.h  binary.c  binary.h  color.h  compat-gl.h  compat-spng.h  compat-windows.h  control.c  control.h  crash.c  crash.h  dimension.h  driver.c  driver.h  env.c  env.h  float.c  float.h  font-constants.h  font-glyph.c  font-glyph.h  font-grapheme.c  font-grapheme.h  font-psf2.c  font-psf2.h  font-utf8-glyph.c  font-utf8-glyph.h  font-utf8.c  font-utf8.h  game.c  game.h  (+50 more)
src/tests/: CMakeLists.txt  test-font-psf2.c  test-font-utf8-glyph.c  test-font-utf8.c  test-path.c  test-utf8-glyph.c  test-utf8.c  test.h
src/tests/unit/: CMakeLists.txt  test-aspect-ratio.c  test-assets.c  test-atlas.c  test-binary.c  test-float.c  test-font-grapheme.c  test-image.c  test-input-button-mapping.c  test-math2.c  test-math4.c  test-path.c  test-string.c  test-utf8-glyph.c  test-utf8.c
tools/: hammer.py  knbuild.py  knife.py
tools/kn/: __init__.py
